syntax = "proto3";
package patrol;

option java_package = "pl.leancode.automatorserver.contracts";

service NativeAutomator {
  // general

  rpc pressHome(Empty) returns (DefaultResponse) {}
  rpc pressBack(Empty) returns (DefaultResponse) {}
  rpc pressRecentApps(Empty) returns (DefaultResponse) {}
  rpc doublePressRecentApps(Empty) returns (DefaultResponse) {}
  rpc openApp(OpenAppRequest) returns (DefaultResponse) {}
  rpc openQuickSettings(OpenQuickSettingsRequest) returns (DefaultResponse) {}

  // general UI interaction
  rpc getNativeViews(GetNativeViewsRequest) returns (GetNativeViewsResponse) {}
  rpc tap(TapRequest) returns (DefaultResponse) {}
  rpc doubleTap(TapRequest) returns (DefaultResponse) {}
  rpc enterText(EnterTextRequest) returns (DefaultResponse) {}
  rpc swipe(SwipeRequest) returns (DefaultResponse) {}

  // services
  rpc enableAirplaneMode(Empty) returns (DefaultResponse) {}
  rpc disableAirplaneMode(Empty) returns (DefaultResponse) {}
  rpc enableWiFi(Empty) returns (DefaultResponse) {}
  rpc disableWiFi(Empty) returns (DefaultResponse) {}
  rpc enableCellular(Empty) returns (DefaultResponse) {}
  rpc disableCellular(Empty) returns (DefaultResponse) {}
  rpc enableBluetooth(Empty) returns (DefaultResponse) {}
  rpc disableBluetooth(Empty) returns (DefaultResponse) {}
  rpc enableDarkMode(DarkModeRequest) returns (DefaultResponse) {}
  rpc disableDarkMode(DarkModeRequest) returns (DefaultResponse) {}

  // notifications
  rpc openNotifications(Empty) returns (DefaultResponse) {}
  rpc closeNotifications(Empty) returns (DefaultResponse) {}
  rpc closeHeadsUpNotification(Empty) returns (DefaultResponse) {}
  rpc getNotifications(GetNotificationsRequest)
      returns (GetNotificationsResponse) {}
  rpc tapOnNotification(TapOnNotificationRequest) returns (DefaultResponse) {}

  // permissions
  rpc handlePermissionDialog(HandlePermissionRequest)
      returns (DefaultResponse) {}
  rpc setLocationAccuracy(SetLocationAccuracyRequest)
      returns (DefaultResponse) {}

  // other

  rpc debug(Empty) returns (DefaultResponse) {}
}

message OpenAppRequest { string appId = 1; }

message TapOnNotificationRequest {
  oneof findBy {
    uint32 index = 1;
    Selector selector = 2;
  }
}

// We're defining our own Empty instead of using google.protobuf.Empty because
// the Dart plugin can't easily generate it.
//
// See:
//  * https://github.com/google/protobuf.dart/issues/170
message Empty {}

message DefaultResponse { string errorMessage = 1; }

message OpenQuickSettingsRequest {}

message DarkModeRequest { string appId = 1; }

message GetNativeViewsRequest { Selector selector = 1; }
message GetNativeViewsResponse {
  oneof value {
    string errorMessage = 1;
    NativeViews nativeViews = 2;
  }
}
message NativeViews { repeated NativeView nativeViews = 1; }

message GetNotificationsRequest {}
message GetNotificationsResponse {
  oneof value {
    string errorMessage = 1;
    Notifications notifications = 2;
  }
}
message Notifications { repeated Notification notifications = 1; }

message TapRequest {
  Selector selector = 1;
  string appId = 2;
}

message EnterTextRequest {
  string data = 1;
  string appId = 2;

  oneof findBy {
    uint32 index = 3;
    Selector selector = 4;
  }
}

message SwipeRequest {
  float startX = 1;
  float startY = 2;
  float endX = 3;
  float endY = 4;
  uint32 steps = 5;
}

message HandlePermissionRequest {
  Code code = 1;

  enum Code {
    WHILE_USING = 0;
    ONLY_THIS_TIME = 1;
    DENIED = 2;
  }
}

message SetLocationAccuracyRequest {
  LocationAccuracy locationAccuracy = 1;

  enum LocationAccuracy {
    COARSE = 0;
    FINE = 1;
  }
}

message Selector {
  optional string text = 1;
  optional string textStartsWith = 2;
  optional string textContains = 3;
  optional string className = 4;
  optional string contentDescription = 5;
  optional string contentDescriptionStartsWith = 6;
  optional string contentDescriptionContains = 7;
  optional string resourceId = 8;
  optional uint32 instance = 9;
  optional bool enabled = 10;
  optional bool focused = 11;
  optional string pkg = 12;
}

// Represents a native UI control.
//
// On Android, this is `android.view.View`.
message NativeView {
  string className = 1;
  string text = 2;
  string contentDescription = 3;
  bool focused = 4;
  bool enabled = 5;
  int32 childCount = 6;
  string resourceName = 7;
  string applicationPackage = 8;
  repeated NativeView children = 9;
}

// Represents a notification visible in the notification shade.
message Notification {
  optional string appName = 1;
  string title = 2;
  string content = 3;
  string raw = 4;
}
